--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -30,11 +30,11 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">grouptest &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="2">GroupingExample</td><td><a href="#m1"><b>test3</b> (regresstion) </a></td><td class="numi">1</td><td>1691773407620</td><td class="numi">5</td></tr><tr class="passedodd"><td><a href="#m2"><b>test4</b> (regresstion) </a></td><td class="numi">1</td><td>1691773407627</td><td class="numi">0</td></tr>
+<tr class="passedodd"><td rowspan="2">Study.GroupingExample</td><td><a href="#m1"><b>test3</b> (regresstion) </a></td><td class="numi">1</td><td>1691773407620</td><td class="numi">5</td></tr><tr class="passedodd"><td><a href="#m2"><b>test4</b> (regresstion) </a></td><td class="numi">1</td><td>1691773407627</td><td class="numi">0</td></tr>
 </table>
 <h1>grouptest</h1>
-<h2 id="m1">GroupingExample:test4</h2>
+<h2 id="m1">Study.GroupingExample:test4</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">GroupingExample:test3</h2>
+<h2 id="m2">Study.GroupingExample:test3</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
